<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common strings -->
    <string name="url">http://www.catsart.net/</string>
    <string name="submit_button">Submit</string>
    <string name="title_email">Email</string>
    <string name="title_name">Name</string>
    <string name="title_password">Password</string>
    <string name="msg_progress">Wait</string>
    <string name="content_about">Disciplina: Introdução ao Desenvolvimento de Software de Código Aberto\n\nDiscente: Catarina Santos nº 58537.\nDocente: Prof. Sancho Oliveira</string>
    <string name="welcome_msg">Welcome</string>

    <!-- Fullscreen Activity Strings -->
    <string name="app_name">ePocket Security</string>
    <string name="login_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="dummy_content">ePocket\nSecurity</string>
    <string name="action_settings">Settings</string>

    <!-- Sign In Activity Strings -->
    <string name="url_login">http://www.catsart.net/WebservicesPHP/login.php</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="sign_in_unsuccess">Wrong credentials! Please, try again.</string>

    <!-- Sign Up Activity Strings -->
    <string name="url_create_user">http://www.catsart.net/WebservicesPHP/create_account.php</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_confirmpwd">Confirm Password</string>
    <string name="title_ipcam">Camera IP</string>
    <string name="title_ippwd">Camera Password</string>
    <string name="sign_up_success">Successfuly Sign Up!</string>
    <string name="sign_up_unsuccess">Sorry, it\'s not possible to Sign Up at the moment.</string>

    <!-- Account Activity Strings -->
    <string name="url_get_image">http://www.catsart.net/WebservicesPHP/get_image.php</string>
    <string name="title_activity_account">Welcome</string>
    <string name="title_section1">Live</string>
    <string name="title_section2">About</string>
    
    <!-- Account Settings Strings -->
    <string name="url_update_account">http://www.catsart.net/WebservicesPHP/update_account.php</string>
    <string name="title_activity_settings">Account Settings</string>
    <string name="title_personal_info">Personal Information</string>
    <string name="title_confirm_changes">Confirm Changes</string>
    <string name="title_change_pwd">Password</string>
    <string name="title_actual_pwd">Actual Password</string>
    <string name="title_new_pwd">New Password</string>
    <string name="title_newConf_pwd">Confirm New Password</string>
    <string name="update_account_unsuccess">Sorry, your actual password is not correct.</string>

</resources>
