<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@layout/activity_sign_up"
        android:layout_alignTop="@layout/activity_sign_up"
        android:orientation="vertical" 
        tools:ignore="UselessParent">
        
        <TextView
	        android:id="@+id/tView_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_email" />

        <EditText
            android:id="@+id/eText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />

        </EditText>
	
	    <TextView
	        android:id="@+id/tView_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_password" />

	    <EditText
	        android:id="@+id/eText_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />
	    
	    <TextView
	        android:id="@+id/tView_confpwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_confirmpwd" />

	    <EditText
	        android:id="@+id/eText_confpwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/tView_ipcam"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_ipcam" />

	    <EditText
	        android:id="@+id/eText_ipcam"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text"/>
	
	    <TextView
	        android:id="@+id/tView_ippwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_ippwd" />

	    <EditText
	        android:id="@+id/eText_ippwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit_button" 
	        android:onClick="resgisterAccount"/>
    
    </LinearLayout>

</RelativeLayout>