<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
	    
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <TextView
			        android:id="@+id/textView0"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/title_personal_info" 
			        android:textAppearance="?android:attr/textAppearanceMedium" />
		        
		        <TextView
		            android:id="@+id/tvName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_name"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <EditText
		            android:id="@+id/etName"
		            android:layout_width="285dp"
		            android:layout_height="wrap_content"
		            android:inputType="text" >
		
		            <requestFocus />
		        </EditText>
		        
		    </LinearLayout>
		
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="30dp"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_change_pwd"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <TextView
		            android:id="@+id/tvNewPwd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_new_pwd"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <EditText
		            android:id="@+id/etNewPwd"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textPassword" />
		
		        <TextView
		            android:id="@+id/tvNewConfPwd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_newConf_pwd"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <EditText
		            android:id="@+id/etNewConfPwd"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textPassword" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="30dp"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_confirm_changes"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		        
		    	<TextView
		            android:id="@+id/tvActualPwd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title_actual_pwd"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        <EditText
		            android:id="@+id/etActualPwd"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:inputType="textPassword" />
		      
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="30dp"
		        android:orientation="vertical" >
		        
		    	<Button
		            android:id="@+id/button1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="updateAccount"
		            android:text="@string/submit_button" />
		    </LinearLayout>
		</LinearLayout>
    </ScrollView>

</RelativeLayout>