<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@layout/activity_sign_in"
        android:layout_alignTop="@layout/activity_sign_in"
        android:orientation="vertical" 
        tools:ignore="UselessParent">
        
        <TextView
	        android:id="@+id/tViewEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_email" />

        <EditText
            android:id="@+id/eTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
	
	    <TextView
	        android:id="@+id/tViewPwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title_password" />

	    <EditText
	        android:id="@+id/eTextPwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit_button"
	        android:onClick="logIn" />
	    
    </LinearLayout>

</RelativeLayout>